name:                tasty-program
version:             0.1.0.0
synopsis:            Run tasty tests that check whether a program executes correctly
-- description:
homepage:            https://github.com/jstolarek/tasty-program
bug-reports:         https://github.com/jstolarek/tasty-program/issues
license:             BSD3
license-file:        LICENSE
author:              Jan Stolarek
maintainer:          jan.stolarek@p.lodz.pl
copyright:           Jan Stolarek, 2014
stability:           experimental
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC>=7.6.3
extra-source-files:  README.md

source-repository head
   type:     git
   location: git://github.com/jstolarek/tasty-program.git

library
  build-depends:       base >=4.6 && <4.8,
                       directory,
                       filepath,
                       process,
                       tasty
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Test.Tasty.Program
